@@ -50,33 +50,33 @@
 
 ;; ------------------------------------------------------------------------
 ;; r4622 | ckuethe | 2007-12-23 18:18:01 -0500 (Sun, 23 Dec 2007) | 2 lines
-;; 
+;;
 ;; uBlox AEK-4T in binary mode. Added to unstable because it breaks gpsfake
-;; 
+;;
 ;; ------------------------------------------------------------------------
 ;; r4621 | ckuethe | 2007-12-23 16:48:11 -0500 (Sun, 23 Dec 2007) | 3 lines
-;; 
+;;
 ;; Add a note about requiring usbfs to use the garmin gps18 (usb)
 ;; Mention firmware testing the AC12 with firmware BQ00 and BQ04
-;; 
+;;
 ;; ------------------------------------------------------------------------
 ;; r4620 | ckuethe | 2007-12-23 15:52:34 -0500 (Sun, 23 Dec 2007) | 1 line
-;; 
+;;
 ;; add link to latest hardware reference
 ;; ------------------------------------------------------------------------
 ;; r4619 | ckuethe | 2007-12-23 14:37:31 -0500 (Sun, 23 Dec 2007) | 1 line
-;; 
+;;
 ;; there is now a regression test for AC12 without raw data output
 
 ;;;; Darcs:
 
 ;; Changes to darcsum.el:
-;; 
+;;
 ;; Mon Nov 28 15:19:38 GMT 2005  Dave Love <fx@gnu.org>
 ;;   * Abstract process startup into darcsum-start-process.  Use TERM=dumb.
-;;   TERM=dumb avoids escape characters, at least, for any old darcs that 
+;;   TERM=dumb avoids escape characters, at least, for any old darcs that
 ;;   doesn't understand DARCS_DONT_COLOR & al.
-;; 
+;;
 ;; Thu Nov 24 15:20:45 GMT 2005  Dave Love <fx@gnu.org>
 ;;   * darcsum-mode-related changes.
 ;;   Don't call font-lock-mode (unnecessary) or use-local-map (redundant).
@@ -91,12 +91,12 @@
 ;; user:        Eric S. Raymond <esr@thyrsus.com>
 ;; date:        Wed Dec 26 12:18:58 2007 -0500
 ;; summary:     Explain keywords.  Add markup fixes.
-;; 
+;;
 ;; changeset:   10:20abc7ab09c3
 ;; user:        Eric S. Raymond <esr@thyrsus.com>
 ;; date:        Wed Dec 26 11:37:28 2007 -0500
 ;; summary:     Typo fixes.
-;; 
+;;
 ;; changeset:   9:ada9f4da88aa
 ;; user:        Eric S. Raymond <esr@thyrsus.com>
 ;; date:        Wed Dec 26 11:23:00 2007 -0500
@@ -250,9 +250,9 @@ The match group number 1 should match the revision number itself.")
   "Major mode for browsing CVS log output."
   (setq buffer-read-only t)
   (set (make-local-variable 'font-lock-defaults) log-view-font-lock-defaults)
-  (set (make-local-variable 'beginning-of-defun-function) 
+  (set (make-local-variable 'beginning-of-defun-function)
        'log-view-beginning-of-defun)
-  (set (make-local-variable 'end-of-defun-function) 
+  (set (make-local-variable 'end-of-defun-function)
        'log-view-end-of-defun)
   (set (make-local-variable 'cvs-minor-wrap-function) 'log-view-minor-wrap))
 
@@ -451,7 +451,7 @@ log entries."
 	     (forward-line 2))
 	    ((eq backend 'Hg)
 	     (forward-line 4)
-	     (re-search-forward "summary: *" nil t)))      
+	     (re-search-forward "summary: *" nil t)))
       (setq st (point))
       (buffer-substring st en))))
 
@@ -504,6 +504,9 @@ and ends."
 	 (list (log-view-current-file))
        log-view-vc-fileset)
        to fr)))
+
+(declare-function vc-diff-internal "vc"
+		  (async vc-fileset rev1 rev2 &optional verbose))
 
 (defun log-view-diff-changeset (beg end)
   "Get the diff between two revisions.
